# hurricane-harm-herald

./: .buildinfo  .gitignore  CITATION.cff  CNAME  LICENSE  README.md  environment_gpu.yml  environment_no_gpu.yml  genindex.html  h3.dataloading.html  h3.dataprocessing.html  h3.html  h3.models.html  h3.plotting.html  h3.utils.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: documentation.yaml  nbqa.yml  pylint.yml  sphinx.yml
_modules/: index.html
_modules/h3/: config.html
_sources/: h3.dataprocessing.rst.txt  h3.rst.txt
data/: df_points_posthurr.pkl
docs/: conf.py  requirements.txt
docs/source/: conf.py  h3.dataloading.rst  h3.dataprocessing.rst  h3.models.rst  h3.plotting.rst  h3.rst  h3.utils.rst  index.rst  modules.rst
h3/: __init__.py  __main__.py  config.py  constants.py
h3/_config/: CMORPH_urls.txt  __init__.py  cli_utils.py  logger.py
h3/data_files/: events-US-1980-2022-damages.csv  isd-metadata.csv
hurricane_harm_herald/: config.py
notebooks/: Basic_Models.ipynb  Explore_xView2.ipynb  Flood_Risk_EF.ipynb  Metadata_and_polygons.ipynb  Metadata_polygons.ipynb  Orlando_RandomForest_EFs.ipynb  Plot_polygons.ipynb  Pytorch_Pipeline.ipynb  RFmodels_EFs.ipynb  RandomForest_EFs.ipynb  Soil_Properties.ipynb  Storm_Surge_EF.ipynb  Terrain_EFs.ipynb  crop_images.ipynb  ecmwf_investigation.ipynb  experiments.ipynb  generate_weather_dfs.ipynb  gtc_functions.py  h3_pipeline.ipynb  lisanne_models.ipynb  process_dfs_for_weather.ipynb  visualise_weather.ipynb  weather_workings.ipynb
(+80 files in other folders)
