[metadata]
name = h3
version = 0.1.0
author = "Owen Allemang, Lisanne Blok, Ruari Marshall-Hawkes, Orlando Timmerman, Peisong Zheng"
author_email =
description =
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT

[option]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
	cmocean
	ipython
	geopandas
	matplotlib
	numpy
	pandas
	pytorch
	torchvision
	rasterio
	rich
	shapely
	tqdm
