[metadata]
name = h3
version = 0.1.0
author = "Owen Allemang, Lisanne Blok, Ruari Marshall-Hawkes, Orlando Timmerman, Peisong Zheng"
author_email =
description =
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT

[option]
;package_dir=
;	=h3
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
	cartopy
	cmocean
	dask
	ipython
	geopandas
	geopy
	h5netcdf
	matplotlib
	numpy
	numba
	opencv-python
	pandas
	pillow
	torch
	--index-url https://download.pytorch.org/whl/cu118; system_platform  != 'Darwin'
	pytorch-lightning
	rasterio
	rich
	richdem
	shapely
	tensorboard
	timm
	torchaudio
	torchvision
	torchmetrics
	tqdm
	seaborn
	scikit-learn
	scipy
	xarray

;
;[options.packages.find]
;where=h3